--- a/emacs.config
+++ b/emacs.config
@@ -1,3 +1,10 @@
+(custom-set-faces
+ ;; custom-set-faces was added by Custom.
+ ;; If you edit it by hand, you could mess it up, so be careful.
+ ;; Your init file should contain only one such instance.
+ ;; If there is more than one, they won't work right.
+ '(default ((t (:inherit nil :stipple nil :background "#3F3F3F" :foreground "#DCDCCC" :inverse-video nil :box nil :strike-through nil :overline nil :underline nil :slant normal :weight normal :height 110 :width normal :foundry "nil" :family "Courier")))))
+
 (custom-set-variables
  ;; custom-set-variables was added by Custom.
  ;; If you edit it by hand, you could mess it up, so be careful.
@@ -5,34 +12,41 @@
  ;; If there is more than one, they won't work right.
  '(company-ghc-autoscan t)
  '(current-language-environment "UTF-8")
- '(package-archives (quote (("gnu" . "http://elpa.gnu.org/packages/") ("marmalade" . "http://marmalade-repo.org/packages/") ("melpa" . "http://melpa.milkbox.net/packages/"))))
+ '(package-archives
+   (quote
+    (("gnu" . "http://elpa.gnu.org/packages/")
+     ("marmalade" . "http://marmalade-repo.org/packages/")
+     ("melpa" . "http://melpa.milkbox.net/packages/"))))
  '(show-paren-mode t))
-(custom-set-faces
- ;; custom-set-faces was added by Custom.
- ;; If you edit it by hand, you could mess it up, so be careful.
- ;; Your init file should contain only one such instance.
- ;; If there is more than one, they won't work right.
- '(default ((t (:family "Consolas" :foundry "outline" :slant normal :weight normal :height 98 :width normal)))))
 
-(setq exec-path (append exec-path '("c:/Program Files/Haskell Platform/2014.2.0.0/bin" "c:/Program Files/Haskell Platform/2014.2.0.0/lib/extralibs/bin" "c:/Users/jibahule/AppData/Roaming/cabal/bin")))
-(setenv "PATH" (concat (getenv "PATH") ";c:/Program Files/Haskell Platform/2014.2.0.0/bin;c:/Program Files/Haskell Platform/2014.2.0.0/lib/extralibs/bin;c:/Program Files/Haskell Platform/2014.2.0.0/mingw/bin;c:/Users/jibahule/AppData/Roaming/cabal/bin"))
+;; Save minibuffer history
+(savehist-mode 1)
+;; Disable backup file creation
+(setq make-backup-files nil)
+;; Use python3
+(setq py-python-command "/Library/Frameworks/Python.framework/Versions/3.4/bin/python3")
+(setenv "PATH" (concat (getenv "PATH") ":/Library/Frameworks/Python.framework/Versions/3.4/bin/"))
+(setq exec-path (append exec-path '("/Library/Frameworks/Python.framework/Versions/3.4/bin/")))
+
+;;(setq exec-path (append exec-path '("c:/Program Files/Haskell Platform/2014.2.0.0/bin" "c:/Program Files/Haskell Platform/2014.2.0.0/lib/extralibs/bin" "c:/Users/jibahule/AppData/Roaming/cabal/bin")))
+;;(setenv "PATH" (concat (getenv "PATH") ";c:/Program Files/Haskell Platform/2014.2.0.0/bin;c:/Program Files/Haskell Platform/2014.2.0.0/lib/extralibs/bin;c:/Program Files/Haskell Platform/2014.2.0.0/mingw/bin;c:/Users/jibahule/AppData/Roaming/cabal/bin"))
 
 (ido-mode)
 
 (add-hook 'after-init-hook 'post-init)
 (defun post-init()
-  ;(require 'zenburn-theme)
+  (require 'zenburn-theme)
   ; jedi setup
   (add-hook 'python-mode-hook 'jedi:ac-setup)
   (setq jedi:complete-on-dot t)
   ; ghc-mod init
-  (autoload 'ghc-init "ghc" nil t)
-  (autoload 'ghc-debug "ghc" nil t)
-  (add-hook 'haskell-mode-hook (lambda () (ghc-init)))
-  (add-hook 'haskell-mode-hook 'haskell-doc-mode)
-  (add-hook 'haskell-mode-hook 'haskell-indent-mode)
-  (add-hook 'haskell-mode-hook 'interactive-haskell-mode)
-  (add-hook 'haskell-mode-hook 'company-mode-haskell-hook)
+  ;;(autoload 'ghc-init "ghc" nil t)
+  ;;(autoload 'ghc-debug "ghc" nil t)
+  ;;(add-hook 'haskell-mode-hook (lambda () (ghc-init)))
+  ;;(add-hook 'haskell-mode-hook 'haskell-doc-mode)
+  ;;(add-hook 'haskell-mode-hook 'haskell-indent-mode)
+  ;;(add-hook 'haskell-mode-hook 'interactive-haskell-mode)
+  ;;(add-hook 'haskell-mode-hook 'company-mode-haskell-hook)
 )
 
 (defun company-mode-haskell-hook()
